logo et nom de page html

--- a/ZumoYunHTML/index.html
+++ b/ZumoYunHTML/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Bridge</title>
+<title>ZumoYun</title>
+<link rel="SHORTCUT ICON" href="logo.ico" />
 
 
  <meta name="apple-mobile-web-app-capable" content="yes">
